-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 19, 20
-
Component/s: hotspot
-
b31
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8290113 | 20 | Martin Doerr | P3 | Resolved | Fixed | b06 |
| JDK-8291411 | 19.0.2 | Martin Doerr | P3 | Resolved | Fixed | b01 |
| JDK-8291254 | 19.0.1 | Martin Doerr | P3 | Resolved | Fixed | b04 |
| JDK-8290301 | 17.0.5 | Martin Doerr | P3 | Resolved | Fixed | b01 |
| JDK-8290328 | 11.0.17 | Martin Doerr | P3 | Resolved | Fixed | b01 |
We need to load last_Java_sp first. Otherwise, last_Java_pc can be 0 causing the assertion.
- backported by
-
JDK-8290113 [PPC64] JfrGetCallTrace: assert(_pc != nullptr) failed: must have PC
-
- Resolved
-
-
JDK-8290301 [PPC64] JfrGetCallTrace: assert(_pc != nullptr) failed: must have PC
-
- Resolved
-
-
JDK-8290328 [PPC64] JfrGetCallTrace: assert(_pc != nullptr) failed: must have PC
-
- Resolved
-
-
JDK-8291254 [PPC64] JfrGetCallTrace: assert(_pc != nullptr) failed: must have PC
-
- Resolved
-
-
JDK-8291411 [PPC64] JfrGetCallTrace: assert(_pc != nullptr) failed: must have PC
-
- Resolved
-
- is cloned by
-
JDK-8293998 [PPC64] JfrGetCallTrace: assert(_pc != nullptr) failed: must have PC
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/9c6fce30
-
Commit
openjdk/jdk17u-dev/ccc4732e
-
Commit
openjdk/jdk19/cb6e9cb7
-
Review
openjdk/jdk11u-dev/1221
-
Review
openjdk/jdk11u-dev/1222
-
Review
openjdk/jdk11u-dev/1223
-
Review
openjdk/jdk17u-dev/545
-
Review
openjdk/jdk19/124