8290004: [PPC64] JfrGetCallTrace: assert(_pc != nullptr) failed: must have PC

Reviewed-by: lucy, clanger
Backport-of: cb6e9cb7286f609dec1fe1157bf95afc503870a9